--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a href="https://www.webfx.com/blog/web-design/command-line/">Download Excursion(Coming soon!)</a>
     </head>
     <body>
-        <video width="320" height="240" controls>
+        <video>
           <source src="resources/videos/excursion.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
