--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
           <source src="resources/videos/excursion.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
+        <h2>Your personal travel guide</h2>
+        <h5>Excursion remembers places you like, and recommends new points of interest around you.</h5>
     </body>
 </html>
