--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
         </video>
         <h2>Your personal travel guide</h2>
         <h5>Excursion remembers places you like, and recommends new points of interest around you.</h5>
+        <img src="resources/images/camp.jpg">
+        <img src="resources/images/phone.png">
+        <h2>Coming Soon for iPhone and Android</h2>
     </body>
 </html>
