all basic html added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <title>Excursion</title>
         <h1>Discover hidden places in the world around you</h1>
-        <a href="https://www.webfx.com/blog/web-design/command-line/">Download Excursion(Coming soon!)</a>
+        <a href="">Download Excursion(Coming soon!)</a>
     </head>
     <body>
         <video>
@@ -15,8 +15,10 @@
         </video>
         <h2>Your personal travel guide</h2>
         <h5>Excursion remembers places you like, and recommends new points of interest around you.</h5>
-        <img src="resources/images/camp.jpg">
-        <img src="resources/images/phone.png">
+        <img id="camp" src="resources/images/camp.jpg">
+        <img id="phone" src="resources/images/phone.png">
         <h2>Coming Soon for iPhone and Android</h2>
+         <a href="">Download Excursion(Coming soon!)</a>
+        <footer>(C) Excursion</footer>
     </body>
 </html>
