--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a href="">Download Excursion(Coming soon!)</a>
     </head>
     <body>
-        <video>
+        <video autoplay>
           <source src="resources/videos/excursion.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
